# rust-cli-todo-app

./: Cargo.toml  README.md  todo.db
.sqlx/: query-18274b04f296699f4211bd3a5b19b6bdf5e33b1573282ea545b4a16ea6f83b56.json  query-a36dabd8460ea242d6103e607a0e6bfedba1be5c6f63114da642799255e73bab.json
migrations/: 01_create_tasks.sql
src/: db.rs  main.rs
