[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.53",  features = ["derive"]}
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
prettytable = { version = "0.10" }


